fixed up some small issues with footer&cards text  & alignment

--- a/src/Components/Layout/Footer/Footer.scss
+++ b/src/Components/Layout/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables.scss';
 .footer {
-  margin-top: 80px;
-  margin-bottom: 30px;
+  margin-top: 100px;
+  margin-bottom: 50px;
   &-links {
     display: flex;
     justify-content: flex-start;
